force-app/main/default/objects/tc9_edc__Setup_Invoice_Schedule__mdt/tc9_edc__Setup_Invoice_Schedule__mdt.object-meta.xml
<CustomObject>
    <description>Post Installation Invoice Schedules available for setup</description>
    <label>Setup Invoice Schedule</label>
    <pluralLabel>Setup Invoice Schedules</pluralLabel>
</CustomObject>