force-app/main/default/objects/tc9_edc__Setup_Invoice_Schedule__mdt/fields/tc9_edc__Earliest_Payroll_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Earliest_Payroll_Calculation_Date__c</fullName>
    <label>Earliest Payroll Calculation Date</label>
    <type>Date</type>
</CustomField>