force-app/main/default/objects/tc9_edc__Setup_Invoice_Schedule__mdt/fields/tc9_edc__Payee_Selection__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Payee_Selection__c</fullName>
    <label>Payee Selection</label>
    <length>200</length>
    <type>Text</type>
</CustomField>