force-app/main/default/objects/tc9_edc__Setup_Invoice_Schedule__mdt/fields/tc9_edc__Split_Option__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Split_Option__c</fullName>
    <label>Split Option</label>
    <length>200</length>
    <type>Text</type>
</CustomField>